# Geo-AID

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  changelog.md  figure.schema.json  stdlib.md  syntax.md  test.py  testoutputs\test.json  testoutputs\test.latex  testoutputs\test.raw
.github/: FUNDING.yml
.github/workflows/: rust.yml
crates/geo-aid-dbg/: Cargo.toml  README.md
crates/geo-aid-dbg/src/: egui_macroquad.rs  egui_miniquad.rs  main.rs
crates/geo-aid-dbg/src/egui_miniquad/: input.rs  painter.rs
crates/geo-aid-figure/: Cargo.toml  LICENSE  README.md
crates/geo-aid-figure/src/: lib.rs  math_string.rs
crates/geo-aid-geogebra/: Cargo.toml
crates/geo-aid-geogebra/src/: lib.rs
crates/geo-aid-internal/: Cargo.toml
crates/geo-aid-internal/src/: cli.rs  engine.rs  format.rs  geometry.rs  lib.rs  projector.rs  script.rs
crates/geo-aid-internal/src/drawer/: latex.rs  raw.rs
crates/geo-aid-internal/src/engine/: compiler.rs  glide.rs  rage.rs  thread_pool.rs
crates/geo-aid-internal/src/engine/rage/: compiler.rs  generator.rs
crates/geo-aid-internal/src/engine/rage/generator/: critic.rs  fast_float.rs  magic_box.rs
crates/geo-aid-internal/src/format/: json.rs  latex.rs  raw.rs  svg.rs
crates/geo-aid-internal/src/script/: builtins.rs  figure.rs  math.rs  parser.rs  token.rs  unroll.rs
crates/geo-aid-internal/src/script/builtins/: angle.rs  bisector.rs  degrees.rs  dst.rs  intersection.rs  lies_on.rs  line.rs  mid.rs  parallel.rs  perpendicular.rs  point.rs  radians.rs  segment.rs
crates/geo-aid-internal/src/script/math/: optimizations.rs
crates/geo-aid-internal/src/script/token/: number.rs
crates/geo-aid-internal/src/script/unroll/: context.rs  figure.rs  flags.rs
crates/geo-aid-json/: Cargo.toml
crates/geo-aid-json/src/: lib.rs
crates/geo-aid-latex/: Cargo.toml
crates/geo-aid-latex/src/: lib.rs
crates/geo-aid-math/: Cargo.toml  README.md
crates/geo-aid-math/.cargo/: config.toml
crates/geo-aid-math/src/: compiler.rs  lib.rs  shared.rs
crates/geo-aid-plaintext/: Cargo.toml
crates/geo-aid-plaintext/src/: lib.rs
crates/geo-aid-script/: Cargo.toml
crates/geo-aid-script/src/: builtins.rs  cli.rs  figure.rs  lib.rs  math.rs  parser.rs  token.rs  unroll.rs
crates/geo-aid-script/src/builtins/: angle.rs  bisector.rs  circle.rs  degrees.rs  dst.rs  intersection.rs  lies_on.rs  line.rs  mid.rs  parallel.rs  perpendicular.rs  point.rs  radians.rs  segment.rs
crates/geo-aid-script/src/math/: optimizations.rs
crates/geo-aid-script/src/token/: number.rs
crates/geo-aid-script/src/unroll/: context.rs  figure.rs  flags.rs  library.rs
crates/geo-aid-svg/: Cargo.toml
crates/geo-aid-svg/src/: lib.rs
crates/geo_aid_derive/: .gitignore  Cargo.toml
crates/geo_aid_derive/src/: lib.rs
geo-aid-book/: book.toml
geo-aid-book/book/: 404.html  cli.html  guide.html  introduction.html  print.html  reference.html  renderers.html  searchindex.js  searchindex.json
geo-aid-book/book/guide/: complicated-figures.html  distances.html  getting-started.html
geo-aid-book/book/reference/: function.html  functions.html  operators.html  rule-operators.html  syntax.html  types.html
geo-aid-book/book/reference/syntax/: display-options.html  expressions.html  figure.html  flags.html  identifiers.html  iterators.html  numbers.html  rules.html  variables.html
geo-aid-book/book/reference/types/: bundle-types.html  primitives.html
geo-aid-book/src/: SUMMARY.md  cli.md  formats.md  guide.md  introduction.md  math.md  reference.md  renderers.md
geo-aid-book/src/guide/: complicated-figures.md  distances.md  getting-started.md
geo-aid-book/src/https:/www.overleaf.com/read/: nnjqztpynydm#156b73
geo-aid-book/src/reference/: display-system.md  flags.md  functions.md  operators.md  rule-operators.md  syntax.md  types.md  weight-system.md
geo-aid-book/src/reference/syntax/: display-options.md  display-properties.md  expressions.md  figure.md  flags.md  identifiers.md  iterators.md  names.md  numbers.md  properties.md  refs.md  rules.md  variables.md
geo-aid-book/src/reference/types/: bundle-types.md  primitives.md
src/: cli.rs  drawer.rs  engine.rs  generator.rs  geometry.rs  labels.rs  lib.rs  main.rs  projector.rs  script.rs
src/drawer/: geogebra.rs  json.rs  latex.rs  raw.rs  svg.rs
src/engine/: rage.rs
src/engine/rage/: compiler.rs  generator.rs
src/engine/rage/generator/: critic.rs  fast_float.rs  magic_box.rs  program.rs
src/generator/: critic.rs  expression.rs  fast_float.rs  geometry.rs  magic_box.rs  program.rs
src/script/: builtins.rs  compile.rs  figure.rs  geometry.rs  math.rs  parser.rs  token.rs  unroll.rs
src/script/builtins/: angle.rs  bisector.rs  circle.rs  degrees.rs  dst.rs  intersection.rs  lies_on.rs  mid.rs  parallel.rs  perpendicular.rs  point.rs  radians.rs  segment.rs
src/script/math/: optimizations.rs
src/script/token/: number.rs
src/script/unroll/: context.rs  entity.rs  figure.rs
std/: base.geo
testoutputs/: test.json  test.latex  test.raw
tests/: LICENSE  collection-construction.geo  complex-numbers.geo  complicated-nooptimization.geo  complicated.geo  distances-adjusted.geo  equilateral-triangle.geo  imo1985-1.geo  incircle-centre.geo  intersection.geo  inverse-pythagorean-theorem.geo  mid-collection-args.geo  names.geo  optimized-with-rules.geo  pc-on-line.geo  perpendicular-parallel.geo  pl-47-1-4.geo  pl-47-1-5.geo  pl-48-1-2.geo  pl-48-1-5.geo  pl-mo-57-1-11.geo  pl-mo-75-1-11.geo  pl-mo-75-1-6.geo  radius-literal.geo  regular-triangle.geo  transforms.geo  triangle-median.geo  trig.geo  v0.4.2-bugs.geo
tests/pl-om-56-2-5/: script.geo
tests/triangle/: script.geo
