[package]
name = "geo-aid-geogebra"
description = "Support for Geogebra (*.ggb) output from Geo-AID."
version = "0.5.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/Geo-AID/Geo-AID"

[dependencies]
geo-aid-figure = { version = "0.5.1", path = "../geo-aid-figure" }
geogebra-types = "0.1.0"
num-traits = "0.2"
