[package]
name = "geo-aid-internal"
description = "Internals of Geo-AID. Can be used for creating alternative interfaces."
version = "0.6.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Geo-AID/geo-aid/"

[dependencies]
geo-aid-figure = { version = "0.6.0", path = "../geo-aid-figure" }
geo-aid-math = { version = "0.6.0", path = "../geo-aid-math" }
geo-aid-script = { version = "0.6.0", path = "../geo-aid-script" }
rand = "0.8.5"
num-traits = "0.2.19"
